FIX: varied team member card width on mobile

--- a/src/sass/partials/layouts/_team.scss
+++ b/src/sass/partials/layouts/_team.scss
@@ -1,68 +1,67 @@
 .team-section {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+
+  @media #{$media-mobile} {
+    flex-direction: column;
+  }
+  @media #{$media-small} {
+    flex-direction: column;
+  }
+  @media (min-width: 768px) {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+  }
+
+  .member-card {
+    width: 80%;
+    height: auto;
+    margin: 10px 0px;
+    border-radius: 2px;
+    padding: 15px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    flex-wrap: wrap;
-
+    align-items: center;
 
     @media #{$media-mobile} {
-        flex-direction: column;
+      width: auto;
     }
     @media #{$media-small} {
-        flex-direction: column;
+      width: auto;
     }
+
     @media (min-width: 768px) {
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+      justify-self: center;
     }
 
-    .member-card {
-        width: 80%;
-        height: auto;
-        margin: 10px;
-        border-radius: 2px;
-        padding: 15px;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        
-        @media #{$media-mobile} {
-            width: auto;
-        }
-        @media #{$media-small} {
-            width: auto;
-        }
-        
-        @media (min-width: 768px) {
-            justify-self: center;
-        }
-
-        .profile-pic {
-            width: 70px;
-            height: 70px;
-            min-width:70px;
-            border-radius: 50%;
-            object-fit: cover;
-        }
-
-        .member-details {
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            justify-content: space-around;
-            margin: 0 10px 0 20px;
-
-            .name {
-                font-size: 1em;
-                margin: 0;
-                font-weight: 100;
-            }
-
-            .designation {
-                font-size: 0.9em;
-                color: rgb(104, 104, 104);
-                margin: 10px 0 0 0;
-            }
-        }
+    .profile-pic {
+      width: 70px;
+      height: 70px;
+      min-width: 70px;
+      border-radius: 50%;
+      object-fit: cover;
     }
+
+    .member-details {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: space-around;
+      margin: 0 10px 0 20px;
+
+      .name {
+        font-size: 1em;
+        margin: 0;
+        font-weight: 100;
+      }
+
+      .designation {
+        font-size: 0.9em;
+        color: rgb(104, 104, 104);
+        margin: 10px 0 0 0;
+      }
+    }
+  }
 }
